x-alignment fixed

--- a/src/features/home/styles/_header.module.scss
+++ b/src/features/home/styles/_header.module.scss
@@ -45,7 +45,7 @@
 }
 
 .header-items ul li:nth-child(1) {
-  padding-bottom: 6%;
+  padding-bottom: 8px;
 }
 
 .header-items ul:nth-child(4) {
